Train-eval loop bash script

--- a/reading_vww_TFRec.ipynb
+++ b/reading_vww_TFRec.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
-    "from PIL import Image\n",
-    "import matplotlib.pylab as plt\n",
+    "#from PIL import Image\n",
+    "#import matplotlib.pylab as plt\n",
     "import numpy as np\n",
     "\n",
     "if int(tf.__version__[0]) < 2:\n",
@@ -38,18 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_dir = 'visualwakewords_vehicle'\n",
+    "dataset_dir = 'visualwakewords_person'\n",
     "train_filenames = [dataset_dir + '/train.record-000{:02d}-of-00100'.format(i) for i in range(100)]\n",
     "val_filenames  = [dataset_dir + '/val.record-0000{:01d}-of-00010'.format(i) for i in range(10)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,9 +88,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/data/ops/iterator_ops.py:532: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n"
+     ]
+    }
+   ],
    "source": [
     "train_labels = []\n",
     "for example in parsed_train_dataset:\n",
@@ -99,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +128,7 @@
      "output_type": "stream",
      "text": [
       "Total number of sample for train: 82783 val: 40504\n",
-      "Total number of images with vehicle in train: 16768 val: 8073\n"
+      "Total number of images with vehicle in train: 26476 val: 12674\n"
      ]
     }
    ],
@@ -129,19 +139,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json \n",
     "\n",
-    "with open('./visualwakewords_vehicle/coco/annotations/instances_train2014.json') as f:\n",
+    "with open('./visualwakewords_person/visualwakewords/annotations/instances_train2014.json') as f:\n",
     "    coco_annotations_dict = json.load(f)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
